2002-11-13  Darin Adler  <darin@apple.com>

	- fixed another crash on http://www.w3.org/Style/CSS/, but still not done

        * khtml/rendering/render_box.cpp: (RenderBox::setStyle): Call renderArena()
	from RenderObject rather than going at the document directly. Safer because
	it works even when we don't have a node yet.
        * khtml/rendering/render_flow.cpp: (RenderFlow::addChild): Ditto.
        * khtml/rendering/render_layer.cpp:
        (RenderLayer::paint): Ditto.
        (RenderLayer::nodeAtPoint): Ditto.
        (RenderLayer::constructZTree): Ditto.
        * khtml/rendering/render_list.cpp:
        (RenderListItem::setStyle): Ditto.
        * khtml/rendering/render_text.cpp:
        (RenderText::deleteSlaves): Ditto.
        (RenderText::position): Ditto. This is the one that actually crashed.

        * khtml/misc/makeattrs: Fixed handling of failure case.
        * khtml/misc/maketags: Ditto.

        * WebCore.pbproj/project.pbxproj: Project Builder wanted to touch this.

2002-11-13  Darin Adler  <darin@apple.com>

	- fixed 3100895 -- REGRESSION: Assertion on http://www.w3.org/Style/CSS/

	A few arena-related fixes.

        * khtml/rendering/bidi.h: Don't define the operator new without the arena parameter.
	That way, we get a link failure if we use it by accident, rather than an assert at runtime.
	It would be even better to get a compile-time error, but I don't know how to make that happen.
        * khtml/rendering/render_layer.h: Ditto.
        * khtml/rendering/render_object.h: Ditto.
        * khtml/rendering/render_text.h: Ditto.

        * khtml/rendering/render_container.cpp:
        (RenderContainer::addChild): Create the RenderTable with the appropriate arena.
        (RenderContainer::insertPseudoChild): Create the RenderFlow objects with the appropriate arena.

        * khtml/rendering/render_text.cpp: (RenderText::deleteSlaves): Don't try to get the arena